@@ -1,21 +1,20 @@
 package com.mmo.controller;
 
-import com.mmo.entity.User;
-import com.mmo.service.AuthService;
-import com.mmo.repository.NotificationRepository;
 import com.mmo.entity.Notification;
+import com.mmo.entity.User;
+import com.mmo.repository.NotificationRepository;
+import com.mmo.service.AuthService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 import org.springframework.security.oauth2.core.user.OAuth2User;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ModelAttribute;
 
 import java.util.List;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 @ControllerAdvice
 public class GlobalModelAttributes {
@@ -45,7 +44,7 @@ public class GlobalModelAttributes {
                         User newUser = new User();
                         newUser.setEmail(email);
                         newUser.setFullName(oauthUser.getAttribute("name"));
-                        newUser.setRole("ROLE_CUSTOMER");
+                        newUser.setRole("CUSTOMER");
                         newUser.setVerified(true); // Mặc định là đã xác thực
                         newUser.setCoins(0L); // Khởi tạo coins là 0
                         user = authService.saveUser(newUser);
@@ -60,20 +59,12 @@ public class GlobalModelAttributes {
             if (user != null) {
                 model.addAttribute("currentUser", user);
                 model.addAttribute("displayName", shortenName(resolvePreferredName(user)));
-                // Load latest UNREAD notifications only (with safe fallbacks)
+                // Load latest unread notifications only (for dropdown)
                 List<Notification> notifications = notificationRepository
                         .findTop20ByUser_IdAndStatusAndIsDeleteOrderByCreatedAtDesc(user.getId(), "Unread", false);
                 if (notifications == null || notifications.isEmpty()) {
                     notifications = notificationRepository
-                            .findTop20ByUser_IdAndStatusOrderByCreatedAtDesc(user.getId(), "Unread");
-                }
-                if (notifications == null || notifications.isEmpty()) {
-                    notifications = notificationRepository
                             .findTop20ByUser_EmailAndStatusAndIsDeleteOrderByCreatedAtDesc(user.getEmail(), "Unread", false);
-                }
-                if (notifications == null || notifications.isEmpty()) {
-                    notifications = notificationRepository
-                            .findTop20ByUser_EmailAndStatusOrderByCreatedAtDesc(user.getEmail(), "Unread");
                 }
                 model.addAttribute("notifications", notifications);
 
@@ -92,7 +83,7 @@ public class GlobalModelAttributes {
                             .countByUser_EmailAndStatus(user.getEmail(), "Unread");
                 }
                 model.addAttribute("unreadCount", unreadCount);
-                log.debug("Loaded {} UNREAD notifications for user {}", notifications != null ? notifications.size() : 0, user.getEmail());
+                log.debug("Loaded {} unread notifications for user {}", notifications != null ? notifications.size() : 0, user.getEmail());
             }
         } catch (Exception ignored) {
             // Avoid breaking views if anything unexpected happens
@@ -100,20 +91,23 @@ public class GlobalModelAttributes {
     }
 
     private String resolvePreferredName(User user) {
-        if (user.getFullName() != null && !user.getFullName().trim().isEmpty()) {
-            return user.getFullName().trim();
+        if (user == null) return "customer";
+        if (user.getFullName() != null && !user.getFullName().isBlank()) {
+            return user.getFullName();
         }
-        String email = user.getEmail();
-        if (email == null) return "";
-        int at = email.indexOf('@');
-        return at > 0 ? email.substring(0, at) : email;
+        return "customer";
     }
 
     private String shortenName(String name) {
-        if (name == null) return "";
-        name = name.trim();
-        int max = 12; // rút gọn tên
-        if (name.length() <= max) return name;
-        return name.substring(0, max - 1) + "…";
+        if (name == null || name.isBlank()) {
+            return "customer";
+        }
+        if (name.equalsIgnoreCase("customer")) {
+            return "customer";
+        }
+        if (name.length() > 12) {
+            return name.substring(0, 10) + "...";
+        }
+        return name;
     }
 }
